--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <dt style="font-size: 22px; text-transform: uppercase; margin-bottom: 12px; margin-top: 36px; font-weight: 600;">Ingenieria de Sistemas</dt>
                             <dd>2017 - Actualidad</dd>
                             <dd>Universidad CUN  Bogota, Colombia.</dd>
-                            <dt style="font-size: 22px; text-transform: uppercase; margin-bottom: 12px; margin-top: 36px; font-weight: 600;">Desarrollo Web Frontend</dt>
+                            <dt style="font-size: 22px; text-transform: uppercase; margin-bottom: 12px; margin-top: 36px; font-weight: 600;">Desarrollador Web Frontend</dt>
                             <dd>2018-Actualidad</dd>
                         </dl>
                     </div>
@@ -56,6 +56,9 @@
                 <div>
                     <dl>
                         <ul>
+                            <li><dt class="dt">Curso profesional de Desarrollo Web</dt></li>
+                            <dd>Abril 2020</dd>
+                                <dd>CODIGO FACILITO</dd>
                         <li><dt class="dt">Master en Javascript, Angular y NodeJs</dt></li>
                             <dd>Abril 2020</dd>
                                 <dd>UDEMY</dd>
