--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="shortcut icon" href="img.jpg" type="image/x-icon">
 </head>
 <body style="font-family: 'Lato', sans-serif; margin: 0;">
-    <header style="background-color: #3949ab; color: white; text-align: center; padding: 16px;">
+    <header style="background-color: #EC0B43; color: white; text-align: center; padding: 16px;">
         <h1 style="display: inline-block; width: 400px; font-weight: 600;">Omar Daniel Garcia</h1>
         <p style="display: inline-block; width: 400px; font-weight: 200;"> Desarrollador Frontend </p>
     </header>
-    <div style="background-color: #00a8cc; text-align: center; padding: 10px;">
+    <div style="background-color: #58FCEC; text-align: center; padding: 10px;">
         Estudiante de Ingenieria y Desarrollo Frontend 
     </div>
     <section>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div style="display: inline-block; width:auto; margin: 20px;">
-                    <img src="img.jpg" width="200">
+                    <img src="omar.jpeg" width="200">
                 </div>
             </div>
             <div>
